--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="header__box-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="../sources/picto/picto_fleche.png">
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="../sources/logo/ohmyfood.png">
