--- a/html/a_la_francaise.html
+++ b/html/a_la_francaise.html
@@ -8,6 +8,9 @@
     <title>Ohmyfood</title>
 </head>
 <body>
+    <div class="loader">
+        <img class="loader__logo" alt="logo ohmyfood" src="../sources/logo/ohmyfood_blanc.png">
+    </div>
     <header class="header">
         <div class="header__box-logo">
             <a href="../index.html">
