--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -8,6 +8,9 @@
     <title>Ohmyfood</title>
 </head>
 <body>
+    <div class="loader">
+        <img class="loader__logo" alt="logo ohmyfood" src="../sources/logo/ohmyfood_blanc.png">
+    </div>
     <header class="header">
         <div class="header__box-logo">
             <a href="../index.html">
@@ -45,7 +48,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src=".../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section2">
@@ -63,7 +66,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src=".../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section3">
@@ -83,7 +86,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src=".../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section4">
@@ -103,7 +106,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src=".../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -131,7 +134,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src=".../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section6">
