--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="loader">
-        <img class="loader__logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood_blanc.png">
-    </div>
+        <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>   
     <header class="header">
         <div class="header__box-logo">
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
@@ -88,6 +88,7 @@
                             </div>
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
                         </div>
+                </a>
                         <div class="section__box-description">
                             <div class="section__box-description--txt">
                                 <h3>
@@ -100,7 +101,6 @@
                             <div class="section__box-description--box-picto"></div>
                         </div>
                     </section>
-                </a>
                 <a href="./html/la_note_enchantee.html">
                     <section class="section">
                         <div class="section__box-img">
@@ -111,55 +111,55 @@
                             </div>
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
                         </div>
-                        <div class="section__box-description">
-                            <div class="section__box-description--txt">
-                                <h3>
-                                    La note enchantée
-                                </h3>
-                                <p>
-                                    Charonne
-                                </p>
-                            </div>
-                            <div class="section__box-description--box-picto"></div>
-                        </div>
-                    </section>
                 </a>
+                           <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                                La note enchantée
+                            </h3>
+                            <p>
+                                Charonne
+                            </p>
+                        </div>
+                        <div class="section__box-description--box-picto"></div>
+                    </div>
+                </section>>
                 <a href="./html/a_la_francaise.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
                         </div>
-                        <div class="section__box-description">
-                            <div class="section__box-description--txt">
-                                <h3>
-                                    À la française
-                                </h3>
-                                <p>
-                                    Cité Rouge
-                                </p>
-                            </div>
-                            <div class="section__box-description--box-picto"></div>
-                        </div>
-                    </section>
                 </a>
+                    <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                                À la française
+                            </h3>
+                            <p>
+                                Cité Rouge
+                            </p>
+                        </div>
+                        <div class="section__box-description--box-picto"></div>
+                    </div>
+                </section>
                 <a href="./html/le_delice_des_sens.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
                         </div>
-                        <div class="section__box-description">
-                            <div class="section__box-description--txt">
-                                <h3>
-                                Le délice des sens
-                                </h3>
-                                <p>
-                                    Folie-Méricourt
-                                </p>
-                            </div>
-                            <div class="section__box-description--box-picto"></div>
-                        </div>
-                    </section>
                 </a>
+                <div class="section__box-description">
+                    <div class="section__box-description--txt">
+                        <h3>
+                        Le délice des sens
+                        </h3>
+                        <p>
+                            Folie-Méricourt
+                        </p>
+                    </div>
+                    <div class="section__box-description--box-picto"></div>
+                </div>
+            </section>
             </div>
         </article>
     </main>
