--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                             </div>
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
                         </div>
-                </a>
+                    </a>
                            <div class="section__box-description">
-                        <div class="section__box-description--txt">
+                           <div class="section__box-description--txt">
                             <h3>
                                 La note enchantée
                             </h3>
@@ -123,13 +123,13 @@
                         </div>
                         <div class="section__box-description--box-picto"></div>
                     </div>
-                </section>>
+                </section>
                 <a href="./html/a_la_francaise.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
                         </div>
-                </a>
+                    </a>
                     <div class="section__box-description">
                         <div class="section__box-description--txt">
                             <h3>
