Correction pour toutes les pages html W3C OK

--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -45,7 +45,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section2">
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section3">
@@ -83,7 +83,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section4">
@@ -103,7 +103,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -131,7 +131,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section6">
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section7">
@@ -169,7 +169,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -197,7 +197,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section9">
@@ -215,7 +215,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section10">
@@ -235,7 +235,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
