--- a/html/a_la_francaise.html
+++ b/html/a_la_francaise.html
@@ -45,7 +45,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section2">
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section3">
@@ -83,7 +83,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section5">
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section6">
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -177,7 +177,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section8">
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section9">
@@ -215,7 +215,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="../sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img" alt="picto check"  src="../sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
